Safari svg fonts overflow bug fixed #138

--- a/src/assets/scss/pages/_detail.scss
+++ b/src/assets/scss/pages/_detail.scss
@@ -92,6 +92,17 @@
 					padding: .4rem .8rem .5rem;
 				}
 
+				.fav-button {
+					height: 2em;
+
+					button {
+						height: 100%;
+					}
+				}
+
+				.share-button {
+					height: 2.2em;
+				}
 				.controls-btn, .fav-button .fav-button-btn {
 					text-transform: uppercase;
 					font-size: 1.2rem;
@@ -188,6 +199,17 @@
 				white-space: nowrap;
 
 				@include media{
+					.fav-button {
+						height: 1.1em;
+
+						button {
+							height: 100%;
+						}
+					}
+
+					.share-button {
+						height: 1.1em;
+					}
 					button{
 						span{
 							margin-left: .4em;
